--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </header>
     <section>
         <dialog>
-            chat with HR..
+            chat with HR Manager...
         </dialog>
         <figure>
             some image
