--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <menu>
                 <span>Home</span>
                 <span>|</span>
-                <span>contact</span>
+                <span>contact us</span>
             </menu>
         </nav>
     </header>
