--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </dialog>
         <figure>
             some image
-            <figcaption>fig_1</figcaption>
+            <figcaption>Demo</figcaption>
 
         </figure>
         <main>
